@@ -15,6 +15,8 @@ Changelog:
 - [NSF Player] Improved display of author notes.
 - [FDS] Fixed handling of CRC blocks during QD format image loading (#416).
 - Fix joystick axes input handling: add RELEASED event trigger when needed before new PRESSED events (#415).
+- Refactor GUI : removed hard-coded stylesheets and centralize theme updates.
+- Fixed rewind state handling and ensured proper cleanup during reset.
 
 0.111
 - Rewritten mappers : All.
